Initial commit with small tweaks from last version

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -2913,7 +2913,7 @@ global without sharing virtual class Rollup {
           BatchChunkSize__c = 2000,
           IsMergeReparentingEnabled__c = true,
           IsRollupLoggingEnabled__c = false,
-          MaxLookupRowsBeforeBatching__c = Limits.getLimitDmlRows() / 3,
+          MaxLookupRowsBeforeBatching__c = Limits.getLimitQueryRows() / 3,
           MaxNumberOfQueries__c = Limits.getLimitQueries() / 2,
           MaxQueryRows__c = Limits.getLimitQueryRows() / 2,
           MaxParentRowsUpdatedAtOnce__c = Limits.getLimitDmlRows() / 2,
