Small tweaks - didn't mean to overwrite a test in RollupFullRecalcTests, and properly creating RollupLimits with API version 56

--- a/extra-tests/classes/RollupFullRecalcTests.cls
+++ b/extra-tests/classes/RollupFullRecalcTests.cls
@@ -2032,6 +2032,54 @@ private class RollupFullRecalcTests {
   }
 
   @IsTest
+  static void shouldCacheRetrievedCalcItemsBetweenFullRecalcRunsCount() {
+    // additionalCalcItemCount shortcuts a Database.countQuery() call in RollupAsyncProcessor
+    // which reduces the MaxNumberOfQueries__c needed below
+    RollupAsyncProcessor.additionalCalcItemCount = 1;
+    Rollup.defaultControl = new RollupControl__mdt(
+      BatchChunkSize__c = 1,
+      MaxNumberOfQueries__c = 6,
+      IsRollupLoggingEnabled__c = true,
+      ShouldRunAs__c = RollupMetaPicklists.ShouldRunAs.Synchronous
+    );
+    Account acc = [SELECT Id FROM Account];
+
+    List<ContactPointAddress> cpas = new List<ContactPointAddress>{
+      new ContactPointAddress(ParentId = acc.Id, PreferenceRank = 1, Name = 'One'),
+      new ContactPointAddress(ParentId = acc.Id, PreferenceRank = 1, Name = 'Two')
+    };
+    insert cpas;
+
+    RollupFullBatchRecalculator fullRecalc = new RollupFullBatchRecalculator(
+      'SELECT Id, PreferenceRank FROM ContactPointAddress',
+      Rollup.InvocationPoint.FROM_APEX,
+      new List<Rollup__mdt>{
+        new Rollup__mdt(
+          CalcItem__c = 'ContactPointAddress',
+          RollupFieldOnCalcItem__c = 'PreferenceRank',
+          LookupFieldOnCalcItem__c = 'ParentId',
+          LookupObject__c = 'Account',
+          LookupFieldOnLookupObject__c = 'Id',
+          RollupFieldOnLookupObject__c = 'AnnualRevenue',
+          RollupOperation__c = 'Count'
+        )
+      },
+      ContactPointAddress.SObjectType,
+      new Set<String>(),
+      null
+    );
+    fullRecalc.addOrderBys(new List<RollupOrderBy__mdt>(), ContactPointAddress.PreferenceRank);
+    // since we can't have more than one batch chunk run in the tests, but we need to test logic in the execute method
+    // we'll call that method twice directly
+    fullRecalc.execute(null, new List<ContactPointAddress>{ cpas[0] });
+    fullRecalc.execute(null, new List<ContactPointAddress>{ cpas[1] });
+
+    acc = [SELECT AnnualRevenue FROM Account];
+    System.assertEquals(2, acc.AnnualRevenue, 'Should have included all calc items in both runs without double-counting or incorrectly summing');
+    System.assertEquals(true, Rollup.CACHED_ROLLUPS.isEmpty(), 'second execute call should have run fully');
+  }
+
+  @IsTest
   static void limitsFullBatchRecalcCachedItemsProperly() {
     Rollup.defaultControl = new RollupControl__mdt(
       BatchChunkSize__c = 1,
